# balance_robot_description

./: CMakeLists.txt  README.md  package.xml
OLD/: controller.launch  gazebo.launch
cfg/: gain.cfg
config/: balance_robot_control.yaml  bobble_robot_control.yaml  controller.yaml  controller_diff_drive_control.yaml  diff_drive_controller.yaml  diff_drive_controller_effort.yaml  gazebo_ros_control.yaml  position_control.yaml
launch/: balance_robot_with_empty_world.launch  bobble_control.launch  bobble_sim.launch  control.launch  control_sim.launch  controller.launch  display.launch  robot_control_diff.launch  robot_control_diff_drive.launch  robot_control_diff_drive_effort.launch  robot_control_sim.launch  robot_display_simple_sim.launch  robot_sim.launch  sim.launch  sim_simplemodel.launch  urdf.rviz
meshes/: base_link_simple_body.stl  base_link_simple_body_origin.stl  left_wheel_2.stl  right_wheel_1.stl  wheel_tire_simple_origin.stl
script/: robot_param.yaml
scripts/: control_param.yaml  control_param_20210307_121407.yaml  get_control_gain.py  robot_param.yaml
src/: balance_robot_control.cpp  balance_robot_control.hpp  control_main.cpp
urdf/: balance_robot.gazebo  balance_robot.trans  balance_robot.xacro  balance_robot_simple.gazebo  balance_robot_simple.urdf  balance_robot_simple.urdf.xacro  balance_robot_simple.xacro  materials.xacro
